--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Personal Site</title>
@@ -10,9 +9,7 @@
     RESUME
     <p> Sophmore, Economics Major</p>
     </center>
-
     <hr size="3">
-
 <h3>Name: Alankrti Aggrwal</h3>
 <h3>Age: 19 yrs</h3>
 <h3>Email id: alankrto@gmail.com</h3>
