--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <h3>Age: 19 yrs</h3>
 <h3>Email id: alankrto@gmail.com</h3>
 <h3>Contact NUmber: 8448457725</h3>
-<a href="file:///C:/Users/Dell/Desktop/HTML%20CS%20PROJECT/education.html"> EDUCATIONAL QUALIFICATIONS </a>
+<a href="education.html"> EDUCATIONAL QUALIFICATIONS </a>
 <br>
-<a href="file:///C:/Users/Dell/Desktop/HTML%20CS%20PROJECT/hobbies.html"> HOBBIES </a>
+<a href="hobbies.html"> HOBBIES </a>
 
 <img src="ahf.jpeg" alt="ALANKRTI" >
 
-<
+
   </body>
 </html>
