--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Personal Site</title>
   </head>
-  <body stle="background-colour;blue">
+  <body stle="background="orange">
     <center>
     <h1> Alankrti Aggrwal</h1>
     RESUME
