--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Personal Site</title>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="styling">
   </head>
   <body>
     <center>
