--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Personal Site</title>
     <link rel="stylesheet" href="styling">
   </head>
-  <body>
+  <body style="background-color: teal;
+font-family:'Roboto', sans-serif">
     <center>
     <h1> Alankrti Aggrwal</h1>
     <h3>RESUME</h3>
