--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ font-family:'Roboto', sans-serif">
 <br><br>
 <a href="hobbiess"> HOBBIES </a>
 <br><br>
-<a href="ques2"> HOBBIES </a>
+<a href="ques2"> CLICK HERE FOR QUESTION 2</a>
 <br><br>
-<a href="ques3"> HOBBIES </a>
+<a href="ques3">CLICK HERE FOR QUESTION 3 </a>
 <br><br>
-<a href="ques5"> HOBBIES </a>
+<a href="ques5">CLICK HERE FOR QUESTION 5</a>
 <br><br>
-<a href="ques10"> HOBBIES </a>
+<a href="ques10"> CLICK HERE FOR QUESTION 10 </a>
 
   </body>
 </html>
