--- a/ques3.html
+++ b/ques3.html
@@ -9,7 +9,7 @@
   <body>
     <center>
     <h1> QUESTION 3</h1>
-    <table>
+    <table border: 1px solid black>
       <tr>
         <th>Name</th>
         <th>Class</th>
