--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="background-color: teal;
 font-family:'Roboto', sans-serif">
     <center>
-    <h1> Alankrti Aggrwal</h1>
+    <h1 style="background-color:coral"> Alankrti Aggrwal</h1>
     <h3>RESUME</h3>
     </center>
 
