--- a/ques2.html
+++ b/ques2.html
@@ -9,23 +9,51 @@
   <body>
     <h1> QUESTION 3</h1>
 
-<ul>
+    <b>Beverages</b>
+    <ul>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
 </ul>
+    
+    <BR>
+ <BR>
+ <BR>
+ <BR>
 
-<ul>
+   <b>Objects</b>
+   <ul>
   <li>Table</li>
   <li>Chair</li>
   <li>Furniture</li>
 </ul>
 
-<ol>
+    <BR>
+ <BR>
+ <BR>
+
+   <b>Colours</b>
+   <ol>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
 </ol>
 
-  </body>
+    <BR>
+ <BR>
+ <BR>
+
+
+   <b> Things</b>
+ <ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+ <BR>
+ <BR>
+ <BR>
+
+   </body>
 </html>
