--- a/quess3.html
+++ b/quess3.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLES</title>
+table, td, th{
+    border: 0.2rem rgb(26, 80, 37) solid;
+}
 
-    <link rel="stylesheet" href="./styles.css">
+table{
+    width: 50rem;
+    height: 20rem;
+}
 </head>
 <body>
     <h1>table</h1>
