--- a/quess3.html
+++ b/quess3.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLES</title>
-table, td, th{
+<style>
+    table, td, th{
     border: 0.2rem rgb(26, 80, 37) solid;
 }
 
@@ -13,6 +14,7 @@ table{
     width: 50rem;
     height: 20rem;
 }
+    </style>
 </head>
 <body>
     <h1>table</h1>
