--- a/ques5.html
+++ b/ques5.html
@@ -5,8 +5,8 @@
     <title>FORM</title>
 </head>
 <body>
-        <h1>Subscribe to XYZ...... blah blah blah</h1>
-        <p>interested in ......  blah blah blah</p>
+        <h1>Subscribe to XYZ News Magzine and Emails</h1>
+        <p>interested in receiving daily upades of all latest new? Well, now youcan, And best of all, it is free! Just fill out the form and submit by clicking the "submit" button. </p>
         <br>
         <br>
         <form action="/bruh">
