--- a/ques5.html
+++ b/ques5.html
@@ -30,7 +30,7 @@
             </p>
 
             <p>
-                *How did you hear..... blah blah blah</p>
+                *How did you hear about us?</p>
             <p>
                 <input type="radio" name="hear" id="web">
                 <label for="web">On Web</label>
@@ -46,7 +46,7 @@
             </p>
 
             <p>
-                *Would you like to....... blah blah blah 
+                *Would you like to be on our regular mailing list?
                 <br>
             <input type="checkbox" name="checkbox" id="checkbox">
             <label for="checkbox">Yes, we love junk emials</label>
