--- a/ques3.html
+++ b/ques3.html
@@ -5,6 +5,12 @@
     <title></title>
     <link rel="stylesheet" href="hs.css">
   </head>
+  
+        <style>
+         table, th, td {
+            border: 1px solid black;
+         }
+      </style>
 
   <body>
     <center>
