--- a/ques3.html
+++ b/ques3.html
@@ -22,16 +22,43 @@
         <th>Name</th>
         <th>Class</th>
         <th>Roll no.</th>
+        <th>Grade</th>
       </tr>
       <tr>
-        <td>Abc</td>
+        <td>Pakhi</td>
         <td>XII-1</td>
         <td>1</td>
+        <td>A</td>
       </tr>
       <tr>
-        <td>DEF</td>
+        <td>Ananaya</td>
         <td>XII-B</td>
         <td>2</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>Riva</td>
+        <td>XII-B</td>
+        <td>2</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>Samay</td>
+        <td>XII-B</td>
+        <td>2</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>Neha</td>
+        <td>XII-B</td>
+        <td>2</td>
+        <td>A</td>
+      </tr>
+      <tr>
+        <td>Aradhya</td>
+        <td>XII-B</td>
+        <td>2</td>
+        <td>A</td>
       </tr>
     </table>
 
