--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 font-family:'Roboto', sans-serif">
     <center>
     <h1 style="background-color:coral"> Alankrti Aggrwal</h1>
-    <h3>RESUME</h3>
+    <marquee><h3>RESUME</h3></marquee>
     </center>
 
     <hr size="5">
