--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ font-family:'Roboto', sans-serif">
 <br> <b>Contact Number: </b> 999999999
 </p>
 
+<br> <br>
+<a href="https://sarthakguptasg.github.io/college-website/" style="text-decoration: none;color:white;"> CLICK HERE FOR COLLEGE WEBSITE TEAM ACTIVITY </a>
+      
+      
 <br><br>
 <a href="education"> EDUCATIONAL QUALIFICATIONS </a>
 <br><br>
