--- a/ques9.html
+++ b/ques9.html
@@ -6,7 +6,7 @@
     <title></title>
   </head>
   <frameset rows="25%,25%,25%,25%">
-    <frame src="q9_2.html">
+    <frame src="https://sarthakguptasg.github.io/college-website/">
     <frame src="https://alankrtiaggrwal.github.io/CV/ques2">
     <frame src="index.html">
     <frameset cols="50%,50%">
