--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@ font-family:'Roboto', sans-serif">
       <br><br>
 
 <a href="ques9"> CLICK HERE FOR QUESTION 9 </a>
+4 <br><br>
 
+<a href="ques6"> CLICK HERE FOR QUESTION 6 </a>
+       <br><br>
+
+<a href="ques7"> CLICK HERE FOR QUESTION 7 </a>
   </body>
 </html>
