--- a/ques6.html
+++ b/ques6.html
@@ -1,15 +1,11 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h3>
-    <a href="index.html" target="f2">Home</a> <br><br>
-    <a href="que2.html" target="f2"> Question 2</a> <br><br>
-    <a href="index.html" target="f2">Home</a>
-    </h3>
-  
-  </body>
+<head>
+    <title>Question 6</title>
+</head>
+<frameset cols="*,*">
+<frame  src="about.html">
+    <frame  name="dept" src="index">
+    
+</frameset>
 </html>
