--- a/ques6.html
+++ b/ques6.html
@@ -4,8 +4,8 @@
     <title>Question 6</title>
 </head>
 <frameset cols="*,*">
-<frame  src="about.html">
-    <frame  name="dept" src="index">
+
+    <frame  name="home" src="index">
     
 </frameset>
 </html>
