--- a/ques6.html
+++ b/ques6.html
@@ -1,11 +1,13 @@
-
 <!DOCTYPE html>
-<head>
-    <title>Question 6</title>
-</head>
-<frameset cols="*,*">
+<html>
 
-    <frame  name="home" src="index">
-    
+<head>
+  <title>ques6</title>
+</head>
+
+<frameset cols="50%,50%">
+  <frame src="index" name="index">
+    <frame src="ques1" name="ques1">
 </frameset>
+
 </html>
