--- a/ques6.html
+++ b/ques6.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>ques6</title>
+  <title>Practical 6</title>
 </head>
 
 <frameset cols="50%,50%">
-  <frame src="index" name="index">
-    <frame src="ques1" name="ques1">
+  <frame src="frame6.1.html" name="frame6.1">
+    <frame src="frame6.2.html" name="frame6.2">
 </frameset>
 
 </html>
