--- a/frame6.1.html
+++ b/frame6.1.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="department.css">
 </head>
 
-<body style="background-color: #CCDECC;">
+<body style="background-color: white">
 
   <center>
     <h1 style="background-color: #8EAC8E;"> ABOUT </h1>
     <br>
-    <p class="main-frame-para"><a href="department1.html" target="frame6.2"> Department of English </a></p>
-    <p class="main-frame-para"><a href="department2.html" target="frame6.2"> Department of Computer Science </a></p>
-    <p class="main-frame-para"><a href="department3.html" target="frame6.2"> Department of Mathematics </a></p>
+    <p class="main-frame-para"><a href="index" target="frame6.2"> Home </a></p>
+    <p class="main-frame-para"><a href="index" target="frame6.2"> Home2 </a></p>
+    <p class="main-frame-para"><a href="index" target="frame6.2"> Home3 </a></p>
 
   </center>
 
