--- a/frame6.2.html
+++ b/frame6.2.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="department.css">
-  <link href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap" rel="stylesheet">
+ 
 </head>
 
 <body>
   <center>
-    <p style="font-size: 140%; margin-top:10%; font-family: Zen Antique Soft;"> This frame displays the details <br> of the selected department from the first frame </p>
+    <p style="font-size: 140%; margin-top:10%; font-family: Zen Antique Soft;"> Click on Home to see its contents </p>
   </center>
 
 </body>
