--- a/frame6.1.html
+++ b/frame6.1.html
@@ -8,7 +8,7 @@
 <body style="background-color: white">
 
   <center>
-    <h1 style="background-color: #8EAC8E;"> ABOUT </h1>
+    <h1 style="background-color: blue;"> FRAMES </h1>
     <br>
     <p class="main-frame-para"><a href="index" target="frame6.2"> Home </a></p>
     <p class="main-frame-para"><a href="index" target="frame6.2"> Home2 </a></p>
