--- a/ques6.html
+++ b/ques6.html
@@ -6,8 +6,8 @@
 </head>
 
 <frameset cols="50%,50%">
-  <frame src="frame6.1.html" name="frame6.1">
-    <frame src="frame6.2.html" name="frame6.2">
+  <frame src="frame6A.html" name="frame6A">
+    <frame src="frame6B.html" name="frame6B">
 </frameset>
 
 </html>
