--- a/frame6A.html
+++ b/frame6A.html
@@ -5,10 +5,10 @@
 
 </head>
 
-<body style="background-color: white">
+<body>
 
   <center>
-    <h1 style="background-color: blue;"> FRAMES </h1>
+    <h1> FRAMES </h1>
     <br>
     <p class="main-frame-para"><a href="index" target="frame6.2"> Home </a></p>
     <p class="main-frame-para"><a href="index" target="frame6.2"> Home2 </a></p>
