--- a/frame6.2.html
+++ b/frame6.2.html
@@ -8,7 +8,7 @@
 
 <body>
   <center>
-    <p style="font-size: 140%; margin-top:10%; font-family: Zen Antique Soft;"> CLICK HERE FOR THE CONTENTS OF DEPT </p>
+    <p style="font-size: 140%; margin-top:10%; font-family: arial;"> CLICK HERE FOR THE CONTENTS OF DEPT </p>
   </center>
 
 </body>
