--- a/frame6.1.html
+++ b/frame6.1.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="department.css">
 </head>
 
-<body style="background-color: white">
+<body style="background-color: #CCDECC;">
 
   <center>
-    <h1 style="background-color: blue;"> FRAMES </h1>
+    <h1 style="background-color: #8EAC8E;"> ABOUT </h1>
     <br>
     <p class="main-frame-para"><a href="department1.html" target="frame6.2"> Department of English </a></p>
     <p class="main-frame-para"><a href="department2.html" target="frame6.2"> Department of Computer Science </a></p>
