--- a/frame6.2.html
+++ b/frame6.2.html
@@ -8,7 +8,7 @@
 
 <body>
   <center>
-    <p style="font-size: 140%; margin-top:10%; font-family: Zen Antique Soft;"> This frame displays the details <br> of the selected department from the first frame </p>
+    <p style="font-size: 140%; margin-top:10%; font-family: Zen Antique Soft;"> CLICK ON HOME TO VIEW CONTENTS </p>
   </center>
 
 </body>
