--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ font-family:'Roboto', sans-serif">
 </p>
 
 <br> <br>
-<a href="https://sarthakguptasg.github.io/college-website/" style="text-decoration: none;color:white;"> CLICK HERE FOR COLLEGE WEBSITE TEAM ACTIVITY </a>
-<a href="https://alankrtiaggrwal.github.io/Myblog/" style="text-decoration: none;color:white;"> CLICK HERE FOR COLLEGE WEBSITE BLOG ACTIVITY </a>      
+<a href="https://sarthakguptasg.github.io/college-website/" style="text-decoration: none;color:orange;"> CLICK HERE FOR COLLEGE WEBSITE TEAM ACTIVITY </a><br>
+<a href="https://alankrtiaggrwal.github.io/Myblog/" style="text-decoration: none;color:yellow;"> CLICK HERE FOR COLLEGE WEBSITE BLOG ACTIVITY </a>      
       
-      
+      <B> PRACTICAL QUESTIONS </B>   
 <br><br>
 <a href="education"> EDUCATIONAL QUALIFICATIONS </a>
 <br><br>
