--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ font-family:'Roboto', sans-serif">
 
 <br> <br>
 <a href="https://sarthakguptasg.github.io/college-website/" style="text-decoration: none;color:orange;"> CLICK HERE FOR COLLEGE WEBSITE TEAM ACTIVITY </a><br>
-<a href="https://alankrtiaggrwal.github.io/Myblog/" style="text-decoration: none;color:yellow;"> CLICK HERE FOR COLLEGE WEBSITE BLOG ACTIVITY </a>      
+<a href="https://alankrtiaggrwal.github.io/Myblog/" style="text-decoration: none;color:yellow;"> CLICK HERE FOR COLLEGE WEBSITE BLOG ACTIVITY </a>     <br> 
       
       <B> PRACTICAL QUESTIONS </B>   
 <br><br>
